# QApp

./: .gitignore  Procfile  README.md  pyproject.toml
backend/: pyproject.toml
backend/backend/api/: deps.py
backend/backend/api/api_v1/: api.py
backend/backend/api/api_v1/endpoints/: items.py  login.py  users.py  utils.py
backend/backend/core/: config.py  security.py
backend/backend/crud/: base.py  crud_item.py  crud_user.py
backend/backend/db/: init_db.py
backend/backend/schemas/: item.py
qApp/: settings.py  urls.py
quiz/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  0002_answer_choice_answer_pub_date.py  0002_survey_name.py  0003_alter_answer_managers_answer_time.py  0003_choice_explanation_alter_choice_choice_text.py  0004_remove_answer_choice_remove_answer_interval_time_and_more.py
quiz/static/quiz/css/: create.css  index.css  mainstyle.css  quiz.css  results.css  surveys.css
quiz/static/quiz/javascript/: creation-survey.js  timer.js
quiz/templates/quiz/: create-survey.html  head.html  header.html  header_auth.html  header_not_auth.html  index.html  quiz.html  results.html  survey.html  survey_detail.html  survey_list.html  survey_list_suser.html  survey_list_user.html
quiz/tests/: exceptions.py  mocks.py  test_models.py  test_views.py
registerUsers/: forms.py  views.py
registerUsers/static/registerUsers/css/: mainstyle.css  register.css
registerUsers/templates/registerUsers/: header.html  register.html
tests/: test.py
