[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
sqlalchemy = "^2.0.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = "^1.10.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = "^5.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
